<resources>
    <string name="app_name">Androidsession2</string>
    <string name="url">Enter URL here</string>
    <string name="name">Username</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone number</string>
    <string name="textview">TextView</string>
    <string name="browse">Browse</string>
    <string name="permission">permission</string>
    <string name="signup">Signup</string>
</resources>
