<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#218997"
    android:layout_height="match_parent"
    tools:context=".sign">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:textSize="18sp"
        android:textColor="#ffff"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="128dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView12"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:textColor="#ffff"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="186dp"
        android:text="@string/email_id" />

    <TextView
        android:id="@+id/textView13"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="64dp"
        android:textColor="#ffff"
        android:layout_marginTop="237dp"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/getName"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="128dp"
        android:textColor="#ffff"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_toEndOf="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:text="@string/textview"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/getEmail"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="106dp"
        android:textColor="#ffff"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_toEndOf="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:text="@string/textview"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/getPhone"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:textColor="#ffff"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_toEndOf="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:text="@string/textview"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        android:gravity="center"
        android:backgroundTint="#ffff"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="246dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/url"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:onClick="browser"
        android:textColor="#ffff"
        android:background="#004896"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="97dp"
        android:layout_marginBottom="166dp"
        android:text="@string/browse" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:onClick="checkPermission"
        android:background="#004896"
        android:textColor="#ffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:layout_marginBottom="166dp"
        android:text="@string/permission" />
</RelativeLayout>